fix z-index

--- a/src/sass/partials/_base.scss
+++ b/src/sass/partials/_base.scss
@@ -1,5 +1,4 @@
 .uit {
-    overflow: hidden;
     background-color: $c-white;
 
     .ios &,
