--- a/src/sass/partials/_page.scss
+++ b/src/sass/partials/_page.scss
@@ -7,7 +7,6 @@ figure.element-atom {
 figure.element-atom,
 figure.interactive-atom {
     margin: 0;
-    overflow: hidden;
     height: 100%;
 }
 
